# mageai-monitoring

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  __init__.py  bigquery.py  config.py  dispatcher.py  docker-compose.yaml  docker-compose.yml  main.py  metrics.py  pyproject.toml  test_payload.json
examples/: new_providers_approval_payload.json  new_providers_wrangling_payload.json  post_filtered_approval_payload.json  post_filtered_selection_payload.json  pre_filtered_payload.json  processable_approval_payload.json  processable_wrangling_payload.json
handlers/: __init__.py  base.py  beneficiaries_volume_ratio_approval.py  beneficiaries_volume_ratio_base.py  beneficiaries_volume_ratio_wrangling.py  expired_validation_claims.py  new_beneficiaries_approval.py  new_beneficiaries_base.py  new_beneficiaries_wrangling.py  new_providers_approval.py  new_providers_base.py  new_providers_wrangling.py  pipeline_run.py  post_filtered_approval.py  post_filtered_base.py  post_filtered_selection.py  pre_filtered_approval.py  pre_filtered_base.py  pre_filtered_common.py  pre_filtered_wrangling.py  processable_approval.py  processable_base.py  processable_wrangling.py  providers_volume_ratio_approval.py  providers_volume_ratio_base.py  providers_volume_ratio_wrangling.py  savings_approval.py  savings_base.py  savings_evaluation.py  selected_savings_approval.py  sent_validation_savings.py  shared_id_fatura_completeness.py  unsent_claims.py  unsent_savings.py
scripts/: seed_bigquery.py
src/: __init__.py  dispatcher.py  metrics.py
tests/: __init__.py  bigquery.py  conftest.py  metrics.py  test_beneficiaries_volume_ratio_approval.py  test_beneficiaries_volume_ratio_base.py  test_bigquery.py  (+31 more)
(+15 files in other folders)
